# redis-oxide

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPATIBILITY.md  COMPLETE_REVIEW.md  CONTRIBUTING.md  Cargo.toml  DOCS.md  GETTING_STARTED.md  INDEX.md  LICENSE-APACHE  LICENSE-MIT  PERFORMANCE.md  PROJECT_SUMMARY.md  README.md  ROADMAP.md  TROUBLESHOOTING.md  clippy.toml  crates.md  deny.toml  rustfmt.toml
.github/workflows/: ci.yml  msrv.yml  performance.yml  production-cicd.yml  release-pipeline.yml
examples/: basic_usage.rs  cluster_usage.rs  pool_strategies.rs
redis-oxide/: ADVISORIES.md  Cargo.toml  OPTIMIZATIONS.md  clippy_check.txt  clippy_errors.txt  clippy_final.txt  clippy_full.txt  clippy_last.txt  clippy_latest.txt  clippy_output.txt
redis-oxide-core/: Cargo.toml
redis-oxide-core/src/: config.rs  error.rs  lib.rs  types.rs  value.rs
redis-oxide/benches/: comprehensive_bench.rs  optimization_comparison.rs  protocol_bench.rs  simple_bench.rs
redis-oxide/examples/: advanced_test.rs  basic_test.rs  comprehensive_demo.rs  performance_demo.rs
redis-oxide/src/: client.rs  cluster.rs  connection.rs  lib.rs  pipeline.rs  pool.rs  pool_optimized.rs  protocol.rs  pubsub.rs  script.rs  sentinel.rs  streams.rs  transaction.rs
redis-oxide/src/commands/: hash.rs  list.rs  mod.rs  optimized.rs  set.rs  sorted_set.rs
redis-oxide/src/core/: config.rs  error.rs  mod.rs  types.rs  value.rs
redis-oxide/src/protocol/: mod.rs  resp2.rs  resp2_optimized.rs  resp3.rs
redis-oxide/tests/: integration_tests.rs  test_data_types.rs  test_pipeline.rs  test_resp3_protocol.rs  test_scripting.rs  test_simple_integration.rs  test_streams.rs  test_transactions_pipelines.rs
