[workspace]
members = ["redis-oxide"]
resolver = "2"

[workspace.package]
version = "0.2.2"
edition = "2021"
rust-version = "1.82.0"
authors = ["Nghia Pham <nghiaphamln3@gmail.com>"]
license = "MIT"
repository = "https://github.com/nghiaphamln/redis-oxide"
homepage = "https://github.com/nghiaphamln/redis-oxide"
documentation = "https://docs.rs/redis-oxide"
readme = "README.md"
keywords = ["redis", "async", "cluster", "cache", "database"]
categories = ["database", "asynchronous", "network-programming"]
description = "High-performance async Redis client for Rust with automatic cluster support, multiplexing, and advanced features"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1.83"

# Data structures
bytes = "1.8"

# Error handling
thiserror = "2.0"

# Logging and tracing
tracing = "0.1.41"

# Redis cluster support
crc16 = "0.4.0"

# Connection pooling
deadpool = "0.12.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# For async streams in Pub/Sub
futures-util = "0.3"

# For Lua script hashing
sha1 = "0.10"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

