[package]
name = "redis-oxide"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "High-performance async Redis client for Rust with automatic cluster support, inspired by StackExchange.Redis for .NET"
documentation = "https://docs.rs/redis-oxide"
readme = "../README.md"
include = [
    "src/**/*",
    "benches/**/*",
    "tests/**/*",
    "examples/**/*",
    "Cargo.toml",
    "../README.md",
    "../LICENSE-MIT",
    "../LICENSE-APACHE",
    "../CHANGELOG.md"
]

[dependencies]
# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Data structures
bytes.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Cluster support
crc16.workspace = true

# Connection pooling
deadpool.workspace = true

# Serialization
serde.workspace = true

# For async streams in Pub/Sub
futures-util.workspace = true

# For Lua script hashing
sha1.workspace = true
hex.workspace = true

# Socket utilities
socket2 = "0.6.1"

# Fast integer formatting
itoa = "1.0"

[dev-dependencies]
tokio-test = "0.4.4"
proptest = "1.5"
criterion = "0.7.0"
testcontainers = "0.25.0"
testcontainers-modules = { version = "0.13.0", features = ["redis"] }
tracing-subscriber = "0.3.18"
futures = "0.3"

[[bench]]
name = "protocol_bench"
harness = false

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "x86_64-apple-darwin"]

